--- a/AudioShare/Player/PlayerViewController.xib
+++ b/AudioShare/Player/PlayerViewController.xib
@@ -27,25 +27,15 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69O-Yv-QD7">
-                    <rect key="frame" x="5" y="25" width="60" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="60" id="Nm9-8h-3aC"/>
-                        <constraint firstAttribute="height" constant="30" id="vCy-t4-sqK"/>
-                    </constraints>
-                    <state key="normal" title="返回">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="backAction:" destination="-1" eventType="touchUpInside" id="0Zq-aE-sJD"/>
-                    </connections>
-                </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="playerBackground.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="CiW-tw-j8a">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder.png" translatesAutoresizingMaskIntoConstraints="NO" id="t5w-1p-b2u">
                     <rect key="frame" x="10" y="64" width="580" height="336"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aEG-Hz-PI2">
-                    <rect key="frame" x="525" y="25" width="60" height="30"/>
-                    <state key="normal" title="定时睡眠">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aEG-Hz-PI2">
+                    <rect key="frame" x="555" y="25" width="40" height="30"/>
+                    <state key="normal" image="clock.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -54,7 +44,6 @@
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--:--" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEq-d0-Dot">
                     <rect key="frame" x="0.0" y="450" width="50" height="20"/>
-                    <color key="backgroundColor" red="0.92167862700385728" green="1" blue="0.066611115740486726" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="6c9-NR-vtw"/>
                         <constraint firstAttribute="width" constant="50" id="FVc-Ml-MuF"/>
@@ -65,7 +54,6 @@
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--:--" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkC-hQ-dE3">
                     <rect key="frame" x="550" y="450" width="50" height="20"/>
-                    <color key="backgroundColor" red="0.92167862700000003" green="1" blue="0.066611115740000004" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -76,7 +64,7 @@
                         <constraint firstAttribute="width" constant="60" id="bU5-Mr-zUK"/>
                         <constraint firstAttribute="height" constant="60" id="ujj-dG-GjX"/>
                     </constraints>
-                    <state key="normal" title="Button" image="music_play_button.png">
+                    <state key="normal" image="music_play_button.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -89,7 +77,7 @@
                         <constraint firstAttribute="width" constant="40" id="IVg-1b-Try"/>
                         <constraint firstAttribute="height" constant="40" id="mqv-Su-DhD"/>
                     </constraints>
-                    <state key="normal" title="Button" image="music_rewind_button.png">
+                    <state key="normal" image="music_rewind_button.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -104,7 +92,14 @@
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
                     <state key="normal" title="播放历史">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="disabled">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="selected">
+                        <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="historyButtonAction:" destination="-1" eventType="touchUpInside" id="4G7-kh-Yoa"/>
@@ -114,13 +109,20 @@
                     <rect key="frame" x="12" y="515" width="40" height="40"/>
                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
                     <state key="normal" title="播放列表">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="disabled">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="selected">
+                        <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="ListButtonAction:" destination="-1" eventType="touchUpInside" id="eHE-Fc-wtP"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ise-wd-RXI">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ise-wd-RXI">
                     <rect key="frame" x="225" y="15" width="150" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="JJj-oj-hyf"/>
@@ -132,6 +134,7 @@
                 </label>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="09b-SZ-6Nf">
                     <rect key="frame" x="53" y="445" width="494" height="31"/>
+                    <color key="minimumTrackTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="thumbTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <action selector="timeSliderAction:" destination="-1" eventType="valueChanged" id="DgR-4d-dsv"/>
@@ -139,11 +142,22 @@
                 </slider>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="245-wy-SYD">
                     <rect key="frame" x="490" y="515" width="40" height="40"/>
-                    <state key="normal" title="Button" image="music_fastforward_button.png">
+                    <state key="normal" image="music_fastforward_button.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="nextButtonAction:" destination="-1" eventType="touchUpInside" id="cUU-pe-6B2"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69O-Yv-QD7">
+                    <rect key="frame" x="5" y="25" width="40" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="Nm9-8h-3aC"/>
+                        <constraint firstAttribute="height" constant="30" id="vCy-t4-sqK"/>
+                    </constraints>
+                    <state key="normal" image="undo.png"/>
+                    <connections>
+                        <action selector="backAction:" destination="-1" eventType="touchUpInside" id="0Zq-aE-sJD"/>
                     </connections>
                 </button>
             </subviews>
@@ -155,6 +169,7 @@
                 <constraint firstItem="t5w-1p-b2u" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="1xf-I7-61o"/>
                 <constraint firstItem="hkC-hQ-dE3" firstAttribute="top" secondItem="pEq-d0-Dot" secondAttribute="top" id="2fy-OW-AgQ"/>
                 <constraint firstItem="ise-wd-RXI" firstAttribute="centerY" secondItem="69O-Yv-QD7" secondAttribute="centerY" id="5OI-hN-tVl"/>
+                <constraint firstAttribute="bottom" secondItem="CiW-tw-j8a" secondAttribute="bottom" id="6CL-L6-ZBW"/>
                 <constraint firstItem="hkC-hQ-dE3" firstAttribute="leading" secondItem="09b-SZ-6Nf" secondAttribute="trailing" constant="5" id="6di-z1-Rni"/>
                 <constraint firstItem="mxg-bV-73w" firstAttribute="centerX" secondItem="09b-SZ-6Nf" secondAttribute="centerX" id="7E4-6Q-6pm"/>
                 <constraint firstItem="pEq-d0-Dot" firstAttribute="top" secondItem="t5w-1p-b2u" secondAttribute="bottom" constant="50" id="7kw-7J-Rwc"/>
@@ -163,6 +178,7 @@
                 <constraint firstItem="mxg-bV-73w" firstAttribute="centerY" secondItem="D5s-b6-nFH" secondAttribute="centerY" id="AIJ-WP-5CD"/>
                 <constraint firstAttribute="bottom" secondItem="t5w-1p-b2u" secondAttribute="bottom" constant="150" id="Ai5-Ga-LAK"/>
                 <constraint firstAttribute="trailing" secondItem="aEG-Hz-PI2" secondAttribute="trailing" constant="10" id="B5f-Iu-RRu"/>
+                <constraint firstItem="CiW-tw-j8a" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Cej-k0-6PW"/>
                 <constraint firstItem="mxg-bV-73w" firstAttribute="top" secondItem="09b-SZ-6Nf" secondAttribute="bottom" constant="30" id="DMl-0c-iPG"/>
                 <constraint firstAttribute="trailing" secondItem="4Qd-Ej-hIg" secondAttribute="trailing" constant="12" id="Hho-a3-KqW"/>
                 <constraint firstItem="69O-Yv-QD7" firstAttribute="top" secondItem="aEG-Hz-PI2" secondAttribute="top" id="IoD-GO-utZ"/>
@@ -174,8 +190,10 @@
                 <constraint firstAttribute="trailing" secondItem="245-wy-SYD" secondAttribute="trailing" constant="80" id="Weh-zp-fIL"/>
                 <constraint firstItem="D5s-b6-nFH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="80" id="XIT-qD-pjj"/>
                 <constraint firstItem="69O-Yv-QD7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="XS5-5z-5gG"/>
+                <constraint firstItem="CiW-tw-j8a" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ax4-YU-mM9"/>
                 <constraint firstItem="4Qd-Ej-hIg" firstAttribute="centerY" secondItem="EIH-rs-s9y" secondAttribute="centerY" id="bWf-X9-I4z"/>
                 <constraint firstItem="09b-SZ-6Nf" firstAttribute="leading" secondItem="pEq-d0-Dot" secondAttribute="trailing" constant="5" id="bge-sJ-0Qp"/>
+                <constraint firstAttribute="trailing" secondItem="CiW-tw-j8a" secondAttribute="trailing" id="bqY-or-wEj"/>
                 <constraint firstAttribute="trailing" secondItem="245-wy-SYD" secondAttribute="trailing" constant="70" id="gb5-Gx-MCC"/>
                 <constraint firstItem="69O-Yv-QD7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="5" id="hAX-lt-8Ph"/>
                 <constraint firstItem="t5w-1p-b2u" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="jYX-jJ-LxW"/>
@@ -191,7 +209,7 @@
                 <constraint firstItem="245-wy-SYD" firstAttribute="top" secondItem="D5s-b6-nFH" secondAttribute="top" id="vec-ZJ-LiG"/>
                 <constraint firstItem="09b-SZ-6Nf" firstAttribute="top" secondItem="t5w-1p-b2u" secondAttribute="bottom" constant="200" id="vlG-61-wdW"/>
                 <constraint firstItem="hkC-hQ-dE3" firstAttribute="height" secondItem="pEq-d0-Dot" secondAttribute="height" id="wNg-0e-Sti"/>
-                <constraint firstAttribute="trailing" secondItem="aEG-Hz-PI2" secondAttribute="trailing" constant="15" id="wZf-ii-lEb"/>
+                <constraint firstAttribute="trailing" secondItem="aEG-Hz-PI2" secondAttribute="trailing" constant="5" id="wZf-ii-lEb"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
@@ -205,12 +223,16 @@
                     <exclude reference="Weh-zp-fIL"/>
                 </mask>
             </variation>
+            <point key="canvasLocation" x="476" y="316"/>
         </view>
     </objects>
     <resources>
+        <image name="clock.png" width="24" height="24"/>
         <image name="music_fastforward_button.png" width="33" height="33"/>
         <image name="music_play_button.png" width="64" height="64"/>
         <image name="music_rewind_button.png" width="33" height="33"/>
         <image name="placeholder.png" width="512" height="512"/>
+        <image name="playerBackground.jpg" width="526" height="614"/>
+        <image name="undo.png" width="18" height="18"/>
     </resources>
 </document>
